syntax = "proto3";

package main;

option go_package = "./pb";

message UsernamePasswordTokenReq {
  string username = 1; //用户登录时使用的用户名
  string password = 2; //用户账户的密码，应存储加密后的值
}

message TokenResp {
  string access_token = 1; //访问令牌
  string access_expire = 2; //访问令牌的有效期
  string refresh_after = 3; //客户端刷新访问令牌的时间点
  string refresh_token = 4; //刷新令牌
}

message RefreshTokenReq {
  string refresh_token = 1; //刷新令牌
}

message CheckTokenReq {
  string access_token = 1;
  string refresh_token = 2;
  string client = 3;
}

service Service {
  // 通过用户名密码获取token
  rpc QueryUsernamePasswordToken(UsernamePasswordTokenReq) returns (TokenResp);
  // 不透明令牌颁发
  rpc QueryUsernamePasswordOpaqueToken(UsernamePasswordTokenReq) returns (TokenResp);
  // 校验不透明令牌
  rpc CheckOpaqueToken(CheckTokenReq) returns (TokenResp);
  // 刷新令牌
  rpc QueryRefreshToken(RefreshTokenReq) returns (TokenResp);
  // 校验Token
  rpc CheckToken(CheckTokenReq) returns (TokenResp);
}